Update index file.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <br>
     <strong>Email: </strong> hapakelvin@gmail.com
     <br>
+    <strong>Github: </strong>
     <strong>Viber: </strong> 09060075251
     <br>
     <strong>WeChat: </strong> 09060075251
@@ -176,6 +177,8 @@
       </td>
     </tr>
   </table>
+  <hr>
+  <h2><u>Projects</u></h2>
   <hr>
   <h2>Leave a message</h2>
   <form action="mailto:keijehapz@gmail.com" method="post" enctype="text/plain">
